<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="playlist_name">Playlist maker</string>
    <string name="train">Поиск</string>
    <string name="mediateca">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app"> Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="search">Поиск еще в работе</string>
    <string name="mediatec_work">Медиатека еще в работе !</string>
    <string name="URL_Android_developer">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="text_plain">text/plain</string>
    <string name="mailto">mailto:</string>
    <string name="my_email">artemenko2711@yandex.ru</string>
    <string name="letter_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="thanksToTheDevelopers">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="URL_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="EDIT_TEXT_CONTENT">EDIT_TEXT_CONTENT</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="text_mediateka_is_clearn">Ваша медиатека пуста</string>
    <string name="text_no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlist">Плейлисты</string>


    <!-- тут мы храним строки tools из track_item -->
    <string name="SmellsLikeTeenSpirit">Smells Like Teen Spirit</string>
    <string name="Nirvana">Nirvana</string>
    <string name="Time5_01">5:01</string>
    <string name="imageNirvanaUrl">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>

    <!-- тут мы храним строки при ошибке поиска песен-->
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="check_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>

    <!-- тут мы храним строки для найденного трека-->
    <string name="track_name">Название трека</string>
    <string name="artist_name">Имя исполнителя</string>
    <string name="track_time">Длительность</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="current_time">00:00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newPlaylist">"Новый плейлист "</string>
    <string name="playlist_name_Input_hint">Название*</string>
    <string name="playlist_description_Input_hint">Описание</string>
    <string name="create">Создать</string>
    <string name="dialog_title_finish_creation">Завершить создание плейлиста?</string>
    <string name="dialog_message_unsaved_data">Все несохраненные данные будут потеряны</string>
    <string name="dialog_button_finish">Завершить</string>
    <string name="dialog_button_cancel">Отмена</string>
    <string name="add_to_playlist">Добавить в плейлист\n</string>

    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="playlist_created_message">Плейлист %s создан</string>
    <string name="there_are_no_tracks">В этом плейлисте нет треков</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="playlist_update_message">Плейлист обновлен</string>
    <string name="delete_track">Удалить трек</string>
    <string name="delete_track_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="empty_playlist_share_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist_title">"Мои треки "</string>
    <string name="edit">Редактировать</string>
    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="delete_playlist_message">Хотите удалить плейлист?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="finish_editing">Завершить редактирование ?</string>


</resources>