<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/ColorBlueOrBlack"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/size_16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingTop="14dp"
            android:textColor="@color/white"
            android:text="@string/playlist_name"
            android:textSize="@dimen/text_size_22sp"
            android:fontFamily ="@font/ys_display_medium"
            android:textFontWeight="500"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="40dp">

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/train"
            app:icon="@drawable/light_mode"
            style="@style/ButtonMainStyle"/>

        <Button
            android:id="@+id/mediateca"
            android:layout_marginVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mediateca"
            app:icon="@drawable/music_mode"
            style="@style/ButtonMainStyle"/>

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:text="@string/settings"
            app:icon="@drawable/chest_model"
            style="@style/ButtonMainStyle" />
    </LinearLayout>

</LinearLayout>
