<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/back_arrow_model"
            app:tint="@color/black"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_22sp"
            android:textStyle="bold"
            android:padding="12dp"/>

    </LinearLayout>
    <Switch
        android:id="@+id/mySwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dark_theme"
        android:textSize="@dimen/text_size_16sp"
        android:paddingVertical="@dimen/size_21dp"
        android:paddingStart="@dimen/size_16dp"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="24dp"
        android:checked="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16sp"
            android:paddingVertical="@dimen/size_21dp"
            android:gravity="center_vertical"
            android:paddingStart ="@dimen/size_16dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/share_app_model"
            android:layout_marginEnd="@dimen/size_18dp"
            android:scaleType="center"
            app:tint="@color/grey"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/write_to_support"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16sp"
            android:paddingVertical="@dimen/size_21dp"
            android:gravity="center_vertical"
            android:paddingStart ="@dimen/size_16dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/support_model"
            android:layout_marginEnd="@dimen/size_18dp"
            android:scaleType="center"
            app:tint="@color/grey"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16sp"
            android:paddingVertical="@dimen/size_21dp"
            android:gravity="center_vertical"
            android:paddingStart ="@dimen/size_16dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/agreement_model"
            android:layout_marginEnd="@dimen/size_18dp"
            android:scaleType="center"
            app:tint="@color/grey"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"/>
    </LinearLayout>

</LinearLayout>
