<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:isScrollContainer="true"
    tools:context=".mediateca.ui.CreatePlaylistFragment">

    <ImageView
        android:id="@+id/back_arrow"
        style="@style/ColorImageViewPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/borderHeaderGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow_model" />

    <TextView
        android:id="@+id/header"
        android:text="@string/newPlaylist"
        app:layout_constraintBottom_toTopOf="@id/borderHeaderGuideline"
        app:layout_constraintStart_toEndOf="@+id/back_arrow"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="12dp"
        style="@style/ScreenTitleSettingsOreSearch" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/borderHeaderGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="56dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/dashed_border"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/cover_placeholder"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/borderHeaderGuideline"
        app:shapeAppearanceOverlay="@style/RoundedImageViewStyle" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        style="@style/CustomTextInputLayout"
        android:layout_marginTop="32dp"
        android:hint="@string/playlist_name_Input_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cover"
        app:cursorColor="@color/blue"
        app:boxStrokeColor="@color/playlist_selector_edit">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description"
        style="@style/CustomTextInputLayout"
        android:layout_marginTop="16dp"
        android:hint="@string/playlist_description_Input_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:cursorColor="@color/blue"
        app:boxStrokeColor="@color/playlist_selector_edit">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16sp"
        android:textAllCaps="false"
        android:backgroundTint="@drawable/bottom_create_playlist_selector"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        android:paddingVertical="12.5dp"
        android:enabled="false"
        android:text="@string/create"
        android:letterSpacing="0"
        android:gravity="center"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>