<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/ColorWhiteOrBlack"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/musicAlbumPicture"
            android:layout_width="45dp"
            android:layout_height="45dp"
            tools:src="@drawable/error_image"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_gravity="center"
            android:orientation="vertical">
                <TextView
                    android:id ="@+id/nameOfTheSong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/SmellsLikeTeenSpirit"
                    android:layout_marginTop="14dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="@dimen/text_size_16sp"
                    android:fontFamily="@font/ys_display_regular"
                    android:textFontWeight="400"
                    android:textColor="?attr/ColorBlackOrWhite"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="14dp">
                        <TextView
                            android:id ="@+id/artistName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/Nirvana"
                            style="@style/TextViewTrackItem"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ellips_13x13"
                            app:tint="?attr/ColorGreyOrWhite"/>
                        <TextView
                            android:id ="@+id/trackTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/Time5_01"
                            style="@style/TextViewTrackItem"/>
                    </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/agreement_model"
            android:paddingEnd="12dp"
            android:layout_gravity="center_vertical"
            app:tint="?attr/ColorGreyOrWhite"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>

