<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/ColorWhiteOrBlack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/back_arrow_model"
        style="@style/ColorImageViewPlayer"
        android:foreground="?attr/selectableItemBackground"/>
    <Space
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/back_arrow"
        app:layout_constraintBottom_toTopOf="@id/album_poster_image"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/size_24dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/size_24dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/text_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/text_duration" />


    <ImageView
        android:id="@+id/album_poster_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder_poster"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/space1"
        app:layout_constraintBottom_toTopOf="@id/space"
        tools:ignore="ContentDescription" />
    <!-- пока вернул app:layout_constraintBottom_toTopOf="@id/track_name"-->
    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/album_poster_image"
        app:layout_constraintBottom_toTopOf="@id/track_name"
        />
    <TextView
        android:id="@+id/track_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintBottom_toTopOf="@id/track_artist"
        android:layout_marginBottom="12dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/track_name"
        android:textSize="@dimen/text_size_22sp"
        android:textColor="?attr/ColorBlackOrWhite"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="400"/>


    <TextView
        android:id="@+id/track_artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintBottom_toTopOf="@id/play_button"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/artist_name"
        android:textSize="14sp"
        android:textColor="?attr/ColorBlackOrWhite"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="400"/>
    <!-- убрал привязку app:layout_constraintBottom_toTopOf="@+id/play_button"-->


    <ImageView
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/play_button"
        android:paddingBottom="4dp"
        style="@style/ColorImageViewPlayer"
        app:layout_constraintStart_toEndOf= "@id/left_guideline"
        app:layout_constraintEnd_toEndOf= "@id/right_guideline"
        app:layout_constraintBottom_toTopOf="@id/text_track_time_value"/>


    <ImageView
        android:id="@+id/add_to_playlist_button"
        android:layout_width="@dimen/size_51dp"
        android:layout_height="@dimen/size_51dp"
        android:background="@drawable/background_player_button"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/play_button" />


    <ImageView
        android:layout_width="@dimen/size_23dp"
        android:layout_height="@dimen/size_23dp"
        android:src="@drawable/add_playlist_button"
        app:layout_constraintBottom_toBottomOf="@id/add_to_playlist_button"
        app:layout_constraintEnd_toEndOf="@id/add_to_playlist_button"
        app:layout_constraintStart_toStartOf="@id/add_to_playlist_button"
        app:layout_constraintTop_toTopOf="@id/add_to_playlist_button" />


    <ImageView
        android:id="@+id/like_button"
        android:layout_width="@dimen/size_51dp"
        android:layout_height="@dimen/size_51dp"
        android:src="@drawable/background_player_button"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/play_button" />


    <ImageView
        android:layout_width="@dimen/size_23dp"
        android:layout_height="25dp"
        android:src="@drawable/heart_button"
        app:layout_constraintBottom_toBottomOf="@id/like_button"
        app:layout_constraintEnd_toEndOf="@id/like_button"
        app:layout_constraintStart_toStartOf="@id/like_button"
        app:layout_constraintTop_toTopOf="@id/like_button" />

    <TextView
        android:id="@+id/text_track_time_value"
        style="@style/TitlesTrackParameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/current_time"
        android:textSize="14sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintBottom_toTopOf="@id/text_duration_value" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_text_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/size_16dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_text_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/size_16dp" />

    <TextView
        android:id="@+id/text_duration"
        style="@style/FieldParameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_time"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/text_album"
        app:layout_constraintStart_toEndOf="@id/left_text_guideline" />


    <TextView
        android:id="@+id/text_duration_value"
        style="@style/TitlesTrackParameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_time"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/text_album"
        app:layout_constraintEnd_toStartOf="@id/right_text_guideline" />

    <TextView
        android:id="@+id/text_album"
        style="@style/FieldParameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/text_year"
        app:layout_constraintStart_toEndOf="@id/left_text_guideline" />


    <TextView
        android:id="@+id/text_album_value"
        style="@style/TitlesTrackParameters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:maxLines="1"
        android:text="@string/album"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/text_year"
        app:layout_constraintEnd_toStartOf="@id/right_text_guideline"
        app:layout_constraintStart_toEndOf="@id/text_duration" />


    <TextView
        android:id="@+id/text_year"
        style="@style/FieldParameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/text_genre"
        app:layout_constraintStart_toEndOf="@id/left_text_guideline" />


    <TextView
        android:id="@+id/text_year_value"
        style="@style/TitlesTrackParameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/text_genre"
        app:layout_constraintEnd_toStartOf="@id/right_text_guideline" />


    <TextView
        android:id="@+id/text_genre"
        style="@style/FieldParameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/text_country"
        app:layout_constraintStart_toEndOf="@id/left_text_guideline" />


    <TextView
        android:id="@+id/text_genre_value"
        style="@style/TitlesTrackParameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/text_country"
        app:layout_constraintEnd_toStartOf="@id/right_text_guideline" />

    <TextView
        android:id="@+id/text_country"
        style="@style/FieldParameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/left_text_guideline" />


    <TextView
        android:id="@+id/text_country_value"
        style="@style/TitlesTrackParameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_text_guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>